--- a/package.json
+++ b/package.json
@@ -3,24 +3,28 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js",
-    "dev": "nodemon app.js -e js, hbs"
+    "start": "node app.js",
+    "dev": "nodemon app.js -e js, hbs",
+    "test": "npx playwright test",
+    "ts-js": "tsc src/utils/*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "hbs": "^4.2.0",
-    "dotenv": "^10.0.0",
     "postman-request": "^2.88.1-postman.30"
   },
   "devDependencies": {
+    "@playwright/test": "^1.17.1",
     "@types/node": "^16.11.9",
-    "nodemon": "^2.0.15",
     "grunt": "^1.4.1",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-ts": "^6.0.0-beta.22"
+    "grunt-ts": "^6.0.0-beta.22",
+    "nodemon": "^2.0.15",
+    "playwright": "^1.17.1"
   },
   "description": ""
 }
